force-app/main/default/objects/AWS_settings__mdt/AWS_settings__mdt.object-meta.xml
<CustomObject>
    <description>Datos de la configuracion de AWS</description>
    <label>AWS settings</label>
    <pluralLabel>AWS settings</pluralLabel>
</CustomObject>