force-app/main/default/objects/AWS_settings__mdt/fields/File_Directory__c.field-meta.xml
<CustomField>
    <fullName>File_Directory__c</fullName>
    <label>File Directory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>