force-app/main/default/objects/AWS_settings__mdt/fields/Name_Credential__c.field-meta.xml
<CustomField>
    <fullName>Name_Credential__c</fullName>
    <label>Name Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>